# automation

./: .gitignore  ADB_GUIDE.md  ANDROID_APP_USAGE.md  Backup-Items.ps1  Compare-Directories.ps1  Convert-Iso8601ToTimezone.ps1  Copy-GitFiles.ps1  Disconnect-SignedInUsers.ps1  Find-NWShare.ps1  Get-CpuMemStats.ps1  Get-FilteredLogs.ps1  Get-ReachableIPs.ps1  Import-HyperVExportedVM.ps1  Invoke-Commit.ps1  README.md  Remove-AzureResources.ps1  Remove-WindowsTempContents.ps1  Restore-Items.ps1  Sync-GitRepos.ps1  Test-AzureApp.ps1  Test-RepoProtection.ps1  Update-GitRepos.ps1  Write-PasswordToFile.ps1  adb_analyse.py  adb_parse.py  android_app_usage.py  check_gitea_branch_protections.py  check_repo_safety.py  decrypt_mremoteng.py  decrypted_diff.py  find_encrypted_text.py  find_methods_calling_method.py  fs_cleanup.py  generate_password.py  generate_totp.py  generate_youtube_subscription_report.py  join_ad.sh  normalize.py  notion_backup.py  package-lock.json  (+17 more)
PowerShell/: Backup-Directories.ps1  Get-FilteredLogs.ps1  Get-ReachableIPs.ps1  New-AzureCertificate.ps1  Remove-WindowsTempContents.ps1  Write-PasswordToFile.ps1
Python/: build_archive.py  decrypt_mremoteng.py  format_hosts.py  generate_totp.py  material_builder.py  normalize.py  oauth_server.py  requirements.txt  test_azure_certificate.py  update_git_repos.py
Python_Scripts/: lines_of_code.py  requirements.txt
Shell_Scripts/: perf_stats.sh
lib/: Encryption.psm1  Filesystem.psm1  Logging.psm1  Networking.psm1  Processes.psm1  Source.psm1  batching.py  cache.py  data_formats.py  encryption.py  filesystem.py  (+5 more)
(+44 files in other folders)
