[project]
name = "automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "beautifulsoup4==4.14.2",
    "cryptography==46.0.7",
    "diskcache==5.6.3",
    "gitpython==3.1.50",
    "google-api-python-client==2.196.0",
    "google-auth==2.53.0",
    "google-auth-oauthlib==1.4.0",
    "msal==1.34.0",
    "odfpy>=1.4.1",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "pdfdocument>=4.0.0",
    "pip-system-certs==5.3",
    "pycryptodome==3.23.0",
    "pyotp==2.9.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "requests==2.33.0",
    "requests-cache==1.2.1",
    "rich==14.3.2",
    "ruamel-yaml==0.17.26",
    "scikit-learn==1.7.2",
    "validators==0.35.0",
    "whoosh==2.7.4",
]
